--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://jessewood.github.io/static-comp-challenge-1/index.html" />
+<meta http-equiv="refresh" content="0; url=https://github.com/Jessewood/jp-comp-challenge-1/blob/master/static-comp-challenge-1/index.html" />
